<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TickList</string>
    <string name="backagain">Please click BACK again to exit</string>
    <string name="add">Add</string>
    <string name="addList">New list</string>
    <string name="name">Name</string>
    <string name="itemlistviewitem">ItemList</string>
    <string name="remove">Remove element</string>
    <string name="removeList">Remove list</string>
    <string name="rename">Rename element</string>
    <string name="renameList">Rename list</string>
    <string name="ItemName">ItemName</string>
    <string name="Ticks">Ticks</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="info">Info</string>
    <string name="about_msg">-- TickList -- \n\n\u00A9 2014 created by TobiNet \n\n view the source code at \nhttps://github.com/TobiNet/Ticklist</string>
    <string name="about_changelog">Release Notes \n v1.2.1\n - Bugfix for big lists\n - minor translation fixes \n v1.2\n - clicks per day as option added\n - reset clicks added \n v1.1.1\n - Bugfix, after creating new list view changes to it\n v1.1\n- English translation added\n- Infobox added\nv1.0\n- PlayStore Release</string>
    <string name="newelement">Add new element</string>
    <string name="create">Add</string>
    <string name="listfirst">Please add a list first</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="newlistcreated">New list added!</string>
    <string name="newlist">Add new list</string>
    <string name="entername">Please enter name!</string>
    <string name="editelement">Edit element</string>
    <string name="removeentry">Remove entry</string>
    <string name="entryremoved">"Entry removed!</string>
    <string name="editlist">Edit list</string>
    <string name="areyousure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset element</string>
    <string name="resetelement">Reset counter</string>
    <string name="PerDay">TicksPerDay</string>
    <string name="TicksPerDay">clicks per day:</string>
    <string name="showtpd">show clicks per day</string>
    <string name="emptytext">No list selected, please select one or create a new one!</string>
    <string name="changecolor">Change Background Color</string>
    
    <string-array name="colors">
        <item>White</item>
        <item>Blue</item>
        <item>Grey</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>

</resources>
