<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/addItemList"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/add"></item>
    <item
        android:id="@+id/addList"
        android:showAsAction="never"
        android:title="@string/addList"></item>
    <item
        android:id="@+id/renameList"
        android:showAsAction="never"
        android:title="@string/renameList"></item>
    <item
        android:id="@+id/removeList"
        android:showAsAction="never"
        android:title="@string/removeList"></item>
    <item
        android:id="@+id/toggletpd"
        android:checkable="true"
        android:title="@string/showtpd"></item>
    <item
        android:id="@+id/info"
        android:showAsAction="never"
        android:title="@string/info"></item>


</menu>
